# bpc-prp

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: RosExampleClass.hpp  aruco.hpp  aruco_node.hpp  encoders.hpp  generalNode.hpp  helper.hpp  imu.hpp  imu_node.hpp  io_node.hpp  keyboard_node.hpp  kinematics.hpp  kinematics_node.hpp  lidar.hpp  lidar_node.hpp  lidar_sensor_node.hpp  line_node.hpp  main_node.hpp  mazeNode.hpp  motors.hpp  pid.hpp  ultrasound_node.hpp  ultrasound_sensor_node.hpp
notes/: TODO  frequent_ros_cmds.txt  kinematics_params.txt  line_follower_nodes_description.txt  nodes_description.txt  nodes_schematic.txt
paper/: czechiso.bst  main.tex  refs.bib
paper/texts/: 1_introduction.tex  2_method.tex  3_conclusion.tex
src/: helper.cpp  main.cpp
src/algorithms/: aruco.cpp  imu.cpp  kinematics.cpp  lidar.cpp  pid.cpp
src/nodes/: aruco.cpp  encoders.cpp  generalNode.cpp  imu.cpp  io_node.cpp  keyboard.cpp  kinematics_node.cpp  lidar.cpp  lidar_sensor.cpp  line.cpp  main_node.cpp  maze_node.cpp  motors.cpp  ultrasound.cpp  ultrasound_sensor.cpp
tests/: CMakeLists.txt  t_kinematics.cpp  t_lineEstimator.cpp
